RESOLVED FIXED129697
Web Inspector: Listen for the XPC_ERROR_CONNECTION_INVALID event to deref
https://bugs.webkit.org/show_bug.cgi?id=129697
Summary Web Inspector: Listen for the XPC_ERROR_CONNECTION_INVALID event to deref
Joseph Pecoraro
Reported 2014-03-04 13:04:59 PST
We could have deref'd on XPC_ERROR_CONNECTION_INTERRUPTED instead of XPC_ERROR_CONNECTION_INVALID. Explicitly deref only on XPC_ERROR_CONNECTION_INVALID.
Attachments
[PATCH] Proposed Fix (2.46 KB, patch)
2014-03-04 13:07 PST, Joseph Pecoraro
no flags
Joseph Pecoraro
Comment 1 2014-03-04 13:07:04 PST
Created attachment 225805 [details] [PATCH] Proposed Fix
WebKit Commit Bot
Comment 2 2014-03-04 14:09:36 PST
Comment on attachment 225805 [details] [PATCH] Proposed Fix Clearing flags on attachment: 225805 Committed r165075: <http://trac.webkit.org/changeset/165075>
WebKit Commit Bot
Comment 3 2014-03-04 14:09:38 PST
All reviewed patches have been landed. Closing bug.
Note You need to log in before you can comment on or make changes to this bug.