Web Inspector: Listen for the XPC_ERROR_CONNECTION_INVALID event to deref https://bugs.webkit.org/show_bug.cgi?id=129697

Patch by Joseph Pecoraro <pecoraro@apple.com> on 2014-03-04
Reviewed by Timothy Hatcher.

* inspector/remote/RemoteInspectorXPCConnection.mm:
(Inspector::RemoteInspectorXPCConnection::RemoteInspectorXPCConnection):
(Inspector::RemoteInspectorXPCConnection::handleEvent):

Canonical link: https://commits.webkit.org/147737@main
git-svn-id: https://svn.webkit.org/repository/webkit/trunk@165075 268f45cc-cd09-0410-ab3c-d52691b4dbfc